# loxplusplus

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md
src/: CMakeLists.txt  err.cpp  main.cpp
src/inc/: Error.h  Lox.h  Uncopyable.h  err.h  jlox_pch.h  loxpp_pch.h
src/lox/: CMakeLists.txt  Error.cpp  Eval.cpp  Interpreter.cpp  Lox.cpp  Object.cpp  Parser.cpp  Print.cpp  Scanner.cpp  Tokens.cpp
src/lox/inc/: CodeGen.h  Eval.h  Expr.h  Interpreter.h  Object.h  Parser.h  Print.h  Scanner.h  Stmt.h  Tokens.h  VisitHelpers.h  _Error.h
